| Bug #7221 | information_schema: errors in "key_column_usage" | ||
|---|---|---|---|
| Submitted: | 13 Dec 2004 1:41 | Modified: | 14 Dec 2004 10:09 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.2) |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
[13 Dec 2004 1:41]
Peter Gulutzan
[14 Dec 2004 10:09]
Sergei Glukhov
Fixed in 5.0 source tree
