Fx for bug#7221: information_schema: errors in "key_column_usage"